kustomize/overlays/local/ngrok-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok
spec:
  selector:
    matchLabels:
      app: ngrok
  replicas: 1
  template:
    metadata:
      labels:
        app: ngrok
    spec:
      containers:
      - name: ngrok
        image: wernight/ngrok
        command: ["ngrok"]
        args: ["http", "local-hello-typeform:3000"]
        ports:
        - containerPort: 4040
